compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__negative_out_of_range_erlang_float_in_pattern.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let assert [-1.8e308, b] = [x, y]"
snapshot_kind: text
---
----- SOURCE CODE
let assert [-1.8e308, b] = [x, y]

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:29
  │
1 │ let assert [-1.8e308, b] = [x, y]
  │                             ^

The name `x` is not in scope here.

error: Float is outside Erlang's floating point range
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let assert [-1.8e308, b] = [x, y]
  │             ^^^^^^^^

This float value is too large to be represented by Erlang's floating point
type. To avoid this error float values must be in the range
-1.7976931348623157e308 - 1.7976931348623157e308.
